      they're based on the GNU libavl red-black trees with parent pointers
    - winx_fbsize, winx_dfbsize, udefrag_fbsize, udefrag_dfbsize routines
      replaced by winx_bytes_to_hr, winx_hr_to_bytes, udefrag_bytes_to_hr,
      udefrag_hr_to_bytes routines in zenwinx and udefrag libraries
    - winx_exit_thread prototype changed by adding the exit status parameter
    - calling conventions removed from all the function prototypes
      in all the libraries

    beta3:
    - volume optimization reimplemented
    - quick volume optimization implemented
    - the cluster map now indicates unused map blocks with gray color
    - one bug preventing a proper redraw of defragmented files was fixed
    - few bugs causing infinite loops in defragmentation algorithm were fixed
    - one bug preventing MFT defragmentation was fixed
    - one bug preventing reports containing Asian characters in file names
      from being built was fixed
    - one bug preventing defragmentation in some cases on Windows NT 4.0
      and Windows 2000 was fixed
    - the documentation was updated to include better information about
      taking screen-shots and creating support packages on the bug reports page
    - tree-view to select chapters was added to documentation and the
      default doxygen color theme is now used
    
    - the following translations were added:

      English (GB), Iloko
    
    - the following translations were updated:
    
      Korean, Turkish, Slovak, English (US), Hindi, Romanian, Filipino (Tagalog),
      Catalan, Spanish (ES), Greek, Chinese (Simplified), Polish, Swedish, 
      Italian, Finnish, Chinese (Traditional), German, Hungarian, Danish
      
    - hexview command added to the boot time shell
    - Developers: udefrag_start_job prototype changed by adding algorithm 
      preview flags

    beta2:
    - UD_LOG_FILE_PATH environment variable added to force save of debugging
      information to a log file. Intended for use in boot time interface