@@ -26,11 +26,10 @@
 
 #include "zenwinx.h"
 
-int kb_open(void);
 void kb_close(void);
-int  winx_create_global_heap(void);
+int winx_create_global_heap(void);
 void winx_destroy_global_heap(void);
-int  winx_init_synch_objects(void);
+int winx_init_synch_objects(void);
 void winx_destroy_synch_objects(void);
 void MarkWindowsBootAsSuccessful(void);
 char *winx_get_error_description(unsigned long status);
@@ -40,7 +39,7 @@ void flush_dbg_log(int already_synchronized);
  * @brief Internal variable indicating
  * whether library initialization failed
  * or not. Intended to be checked by
- * zenwinx_init_failed routine.
+ * winx_init_failed routine.
  */
 int initialization_failed = 1;
 
@@ -48,73 +47,64 @@ int initialization_failed = 1;
 BOOL WINAPI DllMain(HANDLE hinstDLL,DWORD dwReason,LPVOID lpvReserved)
 {
 	if(dwReason == DLL_PROCESS_ATTACH){
-		zenwinx_native_init();
+		winx_init_library(NULL);
 	} else if(dwReason == DLL_PROCESS_DETACH){
-		zenwinx_native_unload();
+		winx_unload_library();
 	}
 	return 1;
 }
 #endif
 
 /**
- * @brief Initializes the library.
- * @details Designed especially to replace DllMain
- * functionality in case of monolithic native application.
- * Call this routine in the beginning of the NtProcessStartup.
+ * @brief Initializes zenwinx library.
+ * @details If the library is linked statically
+ * this routine needs to be called explicitly
+ * before any use of other routines (except a few
+ * ones like winx_print).
+ * @param[in] peb pointer to the Process Environment Block.
+ * May be NULL.
  * @return Zero for success, negative value otherwise.
- */
-int zenwinx_native_init(void)
-{
-	if(winx_create_global_heap() < 0)
-		return (-1);
-	if(winx_init_synch_objects() < 0)
-		return (-1);
-	initialization_failed = 0;
-	return 0;
-}
-
-/**
- * @brief Defines whether the library has 
- * been initialized successfully or not.
- * @return Boolean value.
- */
-int zenwinx_init_failed(void)
-{
-	return initialization_failed;
-}
-
-/**
- * @brief Frees library resources.
- * @note Designed especially to replace DllMain
- * functionality in case of monolithic native application.
- * Don't call it before winx_shutdown() and winx_reboot(),
- * but call always before winx_exit().
- */
-void zenwinx_native_unload(void)
-{
-	winx_destroy_synch_objects();
-	winx_destroy_global_heap();
-}
-
-/**
- * @brief Initializes the native application.
- * @details This routine prepares keyboards
- * for work with user input related procedures.
- * @param[in] peb the Process Environment Block pointer.
- * @result Zero for success, negative value otherwise.
- * @par Example:
+ * @par Example 1 - a native application:
  * @code
- * // native entry point
  * void __stdcall NtProcessStartup(PPEB Peb)
  * {
- *     winx_init(Peb);
- *     // your program code here
- *     // ...
- *     winx_exit(0); // successful exit
+ *     winx_init_library(Peb);
+ *     winx_kb_init();
+ *
+ *     // do something
+ *     winx_printf("Hello!");
+ *     winx_sleep(1000);
+ *
+ *     winx_exit(0);
+ * }
+ * @endcode
+ * @par Example 2 - a command line tool (zenwinx is linked statically):
+ * @code
+ * int main(void)
+ * {
+ *     winx_init_library(NULL);
+ *
+ *     // do something
+ *     printf("Hello!");
+ *     winx_sleep(1000);
+ *
+ *     winx_unload_library();
+ *     return 0;
+ * }
+ * @endcode
+ * @par Example 3 - a command line tool (zenwinx is linked dynamically):
+ * @code
+ * int main(void)
+ * {
+ *     // do something
+ *     printf("Hello!");
+ *     winx_sleep(1000);
+ *
+ *     return 0;
  * }
  * @endcode
  */
-int winx_init(void *peb)
+int winx_init_library(void *peb)
 {
 	PRTL_USER_PROCESS_PARAMETERS pp;
 
@@ -128,8 +118,36 @@ int winx_init(void *peb)
 		}
 	}
 
-	/* open keyboard */
-	return kb_open();
+	if(winx_create_global_heap() < 0)
+		return (-1);
+	if(winx_init_synch_objects() < 0)
+		return (-1);
+	initialization_failed = 0;
+	return 0;
+}
+
+/**
+ * @brief Defines whether zenwinx library has 
+ * been initialized successfully or not.
+ * @details Useful for non-native applications
+ * making no direct call to winx_init_library.
+ * @return Boolean value.
+ */
+int winx_init_failed(void)
+{
+	return initialization_failed;
+}
+
+/**
+ * @brief Frees resources allocated by zenwinx library.
+ * @details If the library is linked statically
+ * to the non-native application this routine 
+ * needs to be called explicitly.
+ */
+void winx_unload_library(void)
+{
+	winx_destroy_synch_objects();
+	winx_destroy_global_heap();
 }
 
 /**
@@ -166,6 +184,7 @@ void winx_exit(int exit_code)
 	
 	kb_close();
 	flush_dbg_log(0);
+	winx_unload_library();
 	Status = NtTerminateProcess(NtCurrentProcess(),exit_code);
 	if(!NT_SUCCESS(Status)){
 		print_post_scriptum("winx_exit: cannot terminate process",Status);
